--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,51 @@
 <resources>
-    <string name="app_name">Mesh</string>
-    <string name="no_lessons_today">Сегодня уроков нет</string>
-    <string name="no_lessons_that_day">На этот день нет уроков</string>
-    <string name="date_picker_button_text_placeholder">Дата</string>
+    <string name="app_name" translatable="false">libremesh</string>
+    <string name="no_lessons_today">No lessons today</string>
+    <string name="no_lessons_that_day">No lessons that day</string>
+    <string name="date_picker_button_text_placeholder">Date</string>
+    <string name="bottom_bar_marks_screen">Marks</string>
+    <string name="bottom_bar_schedule_screen">Schedule</string>
+    <string name="bottom_bar_homework_screen">Homework</string>
+    <string name="bottom_bar_profile_screen">Profile</string>
+    <string name="schedule_screen_return_today_btn">Today</string>
+    <string name="schedule_screen_datepicker_ok_btn">OK</string>
+    <string name="schedule_screen_datepicker_cancel_btn">Cancel</string>
+    <string name="minutes">minutes</string>
+    <string name="lesson_type_ae">additional education</string>
+    <string name="lesson_type_ec">extracullicular</string>
+    <string name="profile_screen_logout_title">Logout</string>
+    <string name="profile_screen_logout_description">You will be logged out of your account. You will then need to re-authorize</string>
+    <string name="profile_screen_logout_confirm">Confirm</string>
+    <string name="profile_screen_logout_cancel">Cancel</string>
+    <string name="profile_screen_title">Profile</string>
+    <string name="profile_screen_section_common_info">Common info</string>
+    <string name="profile_screen_classname">Class:</string>
+    <string name="profile_screen_email">Email:</string>
+    <string name="profile_screen_telephone">Telephone:</string>
+    <string name="profile_screen_section_school">School</string>
+    <string name="profile_screen_school_head">Principal</string>
+    <string name="profile_screen_school_telephone">Telephone:</string>
+    <string name="profile_screen_section_sections">Sections</string>
+    <string name="marks_screen_failed_to_open_lesson">Cannot open lesson</string>
+    <string name="marks_screen_title">Marks</string>
+    <string name="marks_screen_dropdown_arrange_by">Arrange by</string>
+    <string name="marks_screen_dropdown_by_date">Date</string>
+    <string name="marks_screen_dropdown_by_subject">Subject</string>
+    <string name="marks_screen_dropdown_rating">Rating</string>
+    <string name="no_marks">No marks</string>
+    <string name="marks_screen_class_rating_title">Class rating</string>
+    <string name="marks_screen_rating_place">place</string>
+    <string name="marks_screen_average_mark">Avg:</string>
+    <string name="marks_screen_final_mark">Final:</string>
+    <string name="login_screen_welcome_to_libremesh">Welcome to libremesh</string>
+    <string name="login_screen_webview_loading">Loading…</string>
+    <string name="login_screen_processing_oauth_code">Processing OAuth code</string>
+    <string name="error_occurred">Error occurred</string>
+    <string name="lesson_screen_description_tab">Decsription</string>
+    <string name="lesson_screen_marks_tab">Marks</string>
+    <string name="lesson_screen_homework_tab">Homework</string>
+    <string name="lesson_screen_skipped">skipped</string>
+    <string name="homework_screen_title">Homework</string>
+    <string name="error_component_retry_btn">Retry</string>
+    <string name="profile_screen_snils" translatable="false">СНИЛС:</string>
 </resources>
