--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -48,4 +48,5 @@
     <string name="lesson_screen_skipped">пропущен</string>
     <string name="homework_screen_title">Домашняя работа</string>
     <string name="error_component_retry_btn">Повторить</string>
+    <string name="lesson_screen_point_until">Точка до</string>
 </resources>
