--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -52,4 +52,5 @@
     <string name="lesson_screen_mark_created_at">Создана:</string>
     <string name="lesson_screen_mark_updated_at">Обновлена:</string>
     <string name="lesson_screen_mark_exam">Экзамен</string>
+    <string name="lesson_screen_no_homework">Нет задания</string>
 </resources>
