--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="lesson_screen_description_tab">Decsription</string>
     <string name="lesson_screen_marks_tab">Marks</string>
     <string name="lesson_screen_homework_tab">Homework</string>
-    <string name="lesson_screen_skipped">skipped</string>
+    <string name="lesson_skipped">skipped</string>
     <string name="homework_screen_title">Homework</string>
     <string name="error_component_retry_btn">Retry</string>
     <string name="profile_screen_snils" translatable="false">СНИЛС:</string>
