--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -27,7 +27,7 @@
     <string name="profile_screen_school_head">Директор:</string>
     <string name="profile_screen_school_telephone">Телефон:</string>
     <string name="profile_screen_section_sections">Секции</string>
-    <string name="marks_screen_failed_to_open_lesson">Невозможно открыть урок</string>
+    <string name="failed_to_open_lesson">Невозможно открыть урок</string>
     <string name="marks_screen_title">Оценки</string>
     <string name="marks_screen_dropdown_arrange_by">Выбрать по</string>
     <string name="marks_screen_dropdown_by_date">Дате</string>
