--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,7 @@
     <string name="date_picker_button_text_placeholder">Date</string>
     <string name="failed_to_mark_homework_done">Failed to mark homework done: %1$s</string>
     <string name="failed_to_mark_homework_undone">Failed to mark homework undone: %1$s</string>
+    <string name="subject_screen_no_rating">No rating</string>
+    <string name="lesson_screen_all_marks_for_this_subject">All marks for this subject</string>
+    <string name="schedule_screen_select_day">Select day</string>
 </resources>
